tests/purs/failing/UnsupportedFFICommonJSImports2.purs
-- @shouldFailWith UnsupportedFFICommonJSImports
module Main where

foreign import yes :: Boolean
foreign import no :: Boolean
